# EPML

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  HW1_REPORT.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
epml/: __init__.py  dataset.py  features.py  plots.py
epml/modeling/: predict.py  train.py
tests/: test_data.py
